Nolasa datus no datubazes Parāda Liste

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="informacija">Informacija</string>
     <string name="saglabat">Saglabat</string>
     <string name="info">Info</string>
+    <string name="title_activity_data_list">DataListActivity</string>
 </resources>
